--- a/backend/package.json
+++ b/backend/package.json
@@ -16,23 +16,24 @@
     "registration",
     "api"
   ],
-  "author": "Your Name",
+  "author": "Irakli tavadze NIkoloz Eubidze Giorgi Maisuradze",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.7.0",
+    "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.7",
-    "qrcode": "^1.5.3",
-    "stripe": "^14.7.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "express-validator": "^7.3.1",
+    "jsonwebtoken": "^9.0.3",
+    "nodemailer": "^6.10.1",
+    "qrcode": "^1.5.4",
+    "stripe": "^14.25.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
     "prisma": "^5.7.0"
-  }
+  },
+  "type": "commonjs"
 }
