--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:seed": "node prisma/seed.js",
@@ -33,7 +35,13 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "@babel/preset-env": "^7.23.0"
   },
-  "type": "module"
+  "type": "module",
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  }
 }
