--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.22.1",
     "express-validator": "^7.3.1",
+    "compression": "^1.7.4",
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^6.10.1",
     "qrcode": "^1.5.4",
