--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.19",
+    "terser": "^5.44.1",
     "vite": "^5.0.8"
   },
   "engines": {
